[package]
name = "enum_struct_trait"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
html2md = "0.2"

[[bin]]
name="main"
path = "src/main.rs"
