[package]
name = "enum_struct_trait"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
html2md = "0.2"
anyhow = "1" # 错误处理
clap = "3.0.0-beta.4" # 命令行解析
colored = "2" # 命令终端多彩显示
jsonxf = "1.1" # JSON pretty print 格式化
mime = "0.3"
tokio = { version = "1", features = ["full"] } # 异步库

[[bin]]
name="main"
path = "src/main.rs"

[[bin]]
name="httpie"
path = "src/httpie.rs"
